example_deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-upload-download-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-upload-download-app
  template:
    metadata:
      labels:
        app: py-upload-download-app
    spec:
      containers:
      - name: py-upload-download-app
        image: quay.io/rh_ee_swongpai/py-upload-download:836df8e95ed7c15f1de671cab493d030f28d7f33
        ports:
        - containerPort: 5123
        volumeMounts:
        - name: data-volume
          mountPath: /data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc
      imagePullSecrets:
      - name: quay-sec
